tests/valid/enum/outlives_bound_match.facet
enum RefChoice<'a, 'b> where 'a: 'b {
  Left(unrestricted &'b unrestricted isize),
  Empty
}

fn get<'a, 'b>(x: unrestricted RefChoice<'a, 'b>, fallback: unrestricted &'b unrestricted isize) -> unrestricted &'b unrestricted isize where 'a: 'b {
  match x {
    Left(r) => r,
    Empty => fallback,
  }
}
